--- a/notebooks/QuantumDataEncoding.ipynb
+++ b/notebooks/QuantumDataEncoding.ipynb
@@ -33,17 +33,17 @@
    "source": [
     "One of the most important process to construct quantum algorithms is the first step where *classical data* needs to be converted into *quantum data*. It is a crucial step to obtain good results, but it has a huge computational cost in terms of preparing a specific wavefunction $|\\varphi\\rangle$.\n",
     "\n",
-    "In the previous subject, we saw how to create a quantum operator and decompose it into elementary quantum gates. This could be a manner on how to obtain a specific state/wavefunction to work with.\n",
+    "A quantum operator can be decomposed into elementary quantum gates, it could be used to obtain a specific state/wavefunction to work with.\n",
     "\n",
     "In Machine Learning, the process of chaging from the original feature space to other space where the variables have certain properties that help to the model is called *feature map*. It is an esseantial process in classical models and the solution absolutely relys into the selection of the mapping (usually a non-linear function).\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "In Quantum Machine Learning, this is also a very important task (perhaps the most important task for current QML algorithms performed in NISQ devices): how to convert classical data from a feature space to a quantum space (or Hilbert space). The *quantum feature map* consists on applying a unitary transformation $U_{\\phi}(x)$ to convert the feature space $\\mathcal{L}$ into a Hilbert space $\\mathcal{H}$ such, $\\phi:\\mathcal{L}\\rightarrow\\mathcal{H}$. The aim is to transform the input data $x$ into quantum states $|\\phi (x)\\rangle$, $x \\rightarrow |\\phi(x)\\rangle$. Hilbert spaces usually are higher order dimension spaces than where the original data remains.\n",
+    "In Quantum Machine Learning, converting classical data from a feature space to a quantum space (or Hilbert space) is also a very important task (perhaps the most important task for current QML algorithms performed in NISQ devices. The *quantum feature map* consists on applying a unitary transformation $U_{\\phi}(x)$ to convert the feature space $\\mathcal{L}$ into a Hilbert space $\\mathcal{H}$ such, $\\phi:\\mathcal{L}\\rightarrow\\mathcal{H}$. The aim is to transform the input data $x$ into quantum states $|\\phi (x)\\rangle$, $x \\rightarrow |\\phi(x)\\rangle$. Hilbert spaces usually are higher order dimension spaces than where the original data remains.\n",
     "\n",
-    "Once the feature map is applied, a kernel is produced: a higher feature space with certain properties where the data points are easier classified. By switching between kernels one effectively switches between different models (classically speaking), which is known as the *kernel trick*. In the quantum case, the *kernel trick* corresponds to changing the data encoding strategy (as we are going to focus on second generation QML algorithms). Because of this it is very important the study of *quantum feature map*.\n",
+    "Once the feature map is applied, a kernel is produced: a higher feature space with certain properties where the data points are easier classified. By switching between kernels one effectively switches between different models (classically speaking), which is known as the *kernel trick*. In the quantum case, the *kernel trick* corresponds to changing the data encoding strategy (second generation QML algorithms).  *quantum feature map*.\n",
     "\n",
-    "Thus, in the following sections we will see different methods of *quantum feature map*:"
+    "In the following sections we will see different methods of *quantum feature map*:"
    ]
   },
   {
@@ -717,7 +717,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -731,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
